ncc/testsuite/negative/yield.n
using System.Collections.Generic;

module M
{
  public foo () : System.Collections.Generic.IEnumerable[int]
  {
     _ = x ; // E: unbound
    yield 1;
    _ = y; // E: unbound
  }
}

class D
{
  public GetEnumerator () : string
  {
    yield "foo"; // E: yield used in a `GetEnumerator' function, which is returning string
  }
}

